--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Dai Phan Portfolio Website</title>
+    <title>DaiPhan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Font Awesome (bạn đang dùng 7.0.1; nếu icon không lên, thử 6.x free) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="asset/briefcase-solid-full.svg" type="image/svg+xml">
 </head>
 
 <body>
@@ -226,12 +227,10 @@
         <div class="exp-hero">
             <figure class="exp-photo">
                 <img src="asset/exp1.jpg" alt="At previous company — team desk" />
-                <figcaption><i class="fa-solid fa-camera-retro"></i> Team desk — 2025</figcaption>
             </figure>
 
             <figure class="exp-photo">
                 <img src="asset/exp2.jpg" alt="At previous company — onboarding & training" />
-                <figcaption><i class="fa-solid fa-id-badge"></i> Onboarding & training</figcaption>
             </figure>
         </div>
 
