add: personal cv

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#contact" class="btn btn-primary">
                     <i class="fa-solid fa-paper-plane"></i>Contact Me
                 </a>
-                <a class="btn btn-primary" href="#downloadCV">
+                <a class="btn btn-primary" href="#downloadCV" download="DaiPhan_CV_JavaDev_Intern.pdf">
                     <i class="fa-solid fa-file-pdf"></i>Download CV
                 </a>
             </div>
