--- a/index.html
+++ b/index.html
@@ -415,27 +415,27 @@
             </div>
 
             <div class="skills-col" data-group="ai">
-                <h3><i class="fa-solid fa-robot"></i> AI / ML</h3>
+                <h3><i class="fa-solid fa-robot"></i>Version Control / AI</h3>
                 <div class="bar" data-percent="80">
-                    <span>Prompt Builder</span>
+                    <span>Git</span>
                     <div class="bar-track">
                         <div class="bar-fill"></div>
                     </div><em>80%</em>
                 </div>
                 <div class="bar" data-percent="78">
-                    <span></span>
+                    <span>Kanban(Trello, Jira)</span>
                     <div class="bar-track">
                         <div class="bar-fill"></div>
-                    </div><em>78%</em>
+                    </div><em>70%</em>
                 </div>
                 <div class="bar" data-percent="68">
-                    <span>OpenCv</span>
+                    <span>OpenAI</span>
                     <div class="bar-track">
                         <div class="bar-fill"></div>
                     </div><em>68%</em>
                 </div>
                 <div class="bar" data-percent="62">
-                    <span>CUDA Basics</span>
+                    <span>Prompt Builder</span>
                     <div class="bar-track">
                         <div class="bar-fill"></div>
                     </div><em>62%</em>
